# GPGPU-CUDA

./: CMakeLists.txt  Graph.cpp  Graph.hpp  Image.cpp  Image.hpp  Makefile  image_modified.ppm  main  main.cpp  out.ppm
benchmark/: bench.cpp  bench.cu
cpu/include/: Graph.hpp  Image.hpp  graphcut_cpu.hpp
cpu/src/: Graph.cpp  Image.cpp  graphcut_cpu.cpp  main.cpp
doc/: report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc
doc/slides/: slides.tex
doc/slides/Themes/: Packages.tex
gpu/: Graph.cu  Graph.hpp  Image.hpp  Makefile  main.cu
gpu/include/: Graph_gpu.hpp  graphcut_gpu.hpp
gpu/src/: Graph_gpu.cu  graphcut_gpu.cu  main.cu
include/: Graph.hpp
results/: image.pbm  image_blank.ppm  out.ppm
src/: Graph.cpp  main.cpp
